cmake_minimum_required(VERSION 3.26)
set(TARGET_NAME sokoban_testy)
project(sokoban)

set(CMAKE_CXX_STANDARD 17)

add_executable(sokoban main.cpp
        Level.cpp
        Level.h
        Player.cpp
        Player.h
        Move.cpp
        Move.h
)

set(SOURCE_FILES
        Level.cpp
        Level.h
        Player.cpp
        Player.h
        Move.cpp
        Move.h)

set(TEST_FILES
        test1.cpp
        test2.cpp
)

set(GTEST_SOURCE_FILES
        GoogleTest/gtest-death-test.cc
        GoogleTest/gtest-filepath.cc
        GoogleTest/gtest-port.cc
        GoogleTest/gtest-printers.cc
        GoogleTest/gtest-test-part.cc
        GoogleTest/gtest-typed-test.cc
        GoogleTest/gtest.cc
        GoogleTest/gtest_main.cc
)

add_library(gtest OBJECT ${GTEST_SOURCE_FILES})

find_package(Threads REQUIRED)

include_directories(GoogleTest)
add_executable(${TARGET_NAME} ${SOURCE_FILES} ${TEST_FILES} ${GTEST_SOURCE_FILES})
target_link_libraries(${TARGET_NAME} ${CMAKE_THREAD_LIBS_INIT})